# perg

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish-to-pypi.yml  tox.yml
perg/: __init__.py  color.py  common_checkers.py  heuristics.py  perg.py
perg/syntaxes/: bash.py  general.py  python.py  python2.py
test_inputs/: foo.py  shell.sh
tests/: test_heuristics.py  test_perg.py  test_syntaxes_python.py
