[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "perg-search"
version = "0.0.2"
description = "Search code for patterns that match a given string"
authors = [
    { name = "Evan Krall", email = "evan@evankrall.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter @ git+https://github.com/tree-sitter/py-tree-sitter@d9454e5204f42fefeae24ee7799093f36219efa3",
    "tree-sitter-python",
    "tree-sitter-bash==0.25.0",
]
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
perg = "perg.perg:main"

[tool.setuptools.packages.find]
where = ["."]
